--- a/index.html
+++ b/index.html
@@ -4,161 +4,207 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Printables & Digital Goodies: Watch to Unlock</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <style>
-     body {
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
-    box-sizing: border-box;
-}
+        body {
+            font-family: 'Open Sans', sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+        }
 
-#fileGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin-bottom: 20px;
-}
+        h1, h2 {
+            font-family: 'Montserrat', sans-serif;
+            color: #2c3e50;
+            text-align: center;
+            margin: 0;
+        }
 
-.fileItem {
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-    position: relative;
-}
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
 
-.fileItem img.cover {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-    display: block;
-}
+        h2 {
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            color: #367588;
+        }
 
-.fileItem .title {
-    margin-top: 10px;
-    font-weight: bold;
-}
+        p {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto 30px;
+            color: #555;
+        }
 
-.fileItem .button-container {
-    margin-top: 10px;
-}
+        #fileGrid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
 
-.fileItem .button-container button {
-    padding: 10px;
-    background-color: #367588;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 0.9rem;
-    margin: 5px;
-}
+        .fileItem {
+            background: #fff;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
 
-.fileItem .button-container button:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
-}
+        .fileItem:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
 
-#passwordPrompt {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    background: rgba(0, 0, 0, 0.8);
-    border: 1px solid #ccc;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    color: white;
-    width: 90%;
-    max-width: 400px;
-}
+        .fileItem img.cover {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
 
-#passwordPrompt input {
-    padding: 10px;
-    margin: 10px 0;
-    color: black;
-    width: 100%;
-    box-sizing: border-box;
-}
+        .fileItem .title {
+            font-size: 1.1rem;
+            font-weight: bold;
+            padding: 15px;
+            text-align: center;
+            color: #2c3e50;
+        }
 
-#passwordPrompt button {
-    padding: 10px;
-    margin: 5px;
-}
+        .fileItem .button-container {
+            padding: 0 15px 15px;
+            text-align: center;
+        }
 
-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.0rem;
-    color: #367588;
-    margin: 12px;
-    padding: 10px;
-}
+        .fileItem .button-container button {
+            padding: 10px 20px;
+            background-color: #367588;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            margin: 5px;
+            transition: background-color 0.3s ease;
+        }
 
-.subtitle {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.0rem;
-    color: #367588;
-    margin: 5px;
-}
+        .fileItem .button-container button:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
+        }
 
-/* Responsive Typography */
-@media (max-width: 768px) {
-    h1 {
-        font-size: 1.8rem;
-    }
-    .subtitle {
-        font-size: 1.2rem;
-    }
-}
+        .fileItem .button-container button:hover:not(:disabled) {
+            background-color: #2c3e50;
+        }
 
-@media (max-width: 480px) {
-    h1 {
-        font-size: 1.5rem;
-    }
-    .subtitle {
-        font-size: 1rem;
-    }
-}
-      .cover-container {
-    position: relative;
-    display: inline-block;
-}
+        #passwordPrompt {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            z-index: 1000;
+        }
 
-.pinterest-share {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 10;
-    background-color: white;
-    border: 1px solid #e0e0e0;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 12px;
-    color: #b71c1c;
-    text-decoration: none;
-}
+        #passwordPrompt h2 {
+            margin-bottom: 15px;
+            font-size: 1.5rem;
+            color: #2c3e50;
+        }
 
-.cover {
-    display: block;
-    width: 100%;
-    height: auto;
-}
+        #passwordPrompt input {
+            padding: 10px;
+            margin: 10px 0;
+            width: 100%;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
 
-.fileItem {
-    margin-bottom: 20px;
-}
+        #passwordPrompt button {
+            padding: 10px 20px;
+            margin: 5px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            transition: background-color 0.3s ease;
+        }
 
-.title {
-    margin: 10px 0;
-}
+        #passwordPrompt button:first-of-type {
+            background-color: #367588;
+            color: white;
+        }
 
-.button-container {
-    margin-top: 10px;
-}
+        #passwordPrompt button:last-of-type {
+            background-color: #e74c3c;
+            color: white;
+        }
 
-   </style>
+        #passwordPrompt button:hover {
+            opacity: 0.9;
+        }
+
+        .pinterest-share {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #e60023;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 0.8rem;
+            text-decoration: none;
+            z-index: 10;
+        }
+
+        @media (max-width: 1200px) {
+            #fileGrid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            #fileGrid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            h2 {
+                font-size: 1.2rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            #fileGrid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
   <script type="application/ld+json">
 {
     "@context": "https://schema.org",
@@ -348,7 +394,7 @@ h1 {
     <div class="fileItem" id="file9" data-password="wag kalimutan" data-file-link="https://mega.nz/folder/PO4G3TBb#bubgG_wNpj-hf67yWF-bqQ">
         <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fcute%20desktop%20wallpaper.jpg?alt=media&token=aaaec86d-b2fb-493a-960e-c0d84b23edb7" alt="File Cover" class="cover">
         <a href="https://www.pinterest.com/pin/create/button/?url=https://mega.nz/folder/PO4G3TBb#bubgG_wNpj-hf67yWF-bqQ" class="pinterest-share" target="_blank">Pin it</a>
-        <div class="title">Personal Use Only- Cute Desktop Wallpapers by Berry Soup</div>
+        <div class="title">Personal Use Only-Desktop Wallpapers by Berry Soup</div>
         <div class="button-container">
             <button onclick="watchReel('file9', 'https://www.facebook.com/share/r/kMwQm9ngn8bgwhZi/')">Watch Facebook Reel</button>
             <button id="downloadBtn9" disabled onclick="downloadFile('file9')">Download File 9</button>
