--- a/index.html
+++ b/index.html
@@ -421,6 +421,16 @@
         </div>
     </div>
 
+       <div class="fileItem" id="file12" data-password="sanhi" data-file-link="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fdesktop%20wallpaper%20organizer%20calendar%20to%20do%20list.jpg?alt=media&token=083a5252-d2ca-40c0-b2d1-538120eb58cf">
+       <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fdesktop%20wallpaper%20organizer%20calendar%20to%20do%20list.jpg?alt=media&token=083a5252-d2ca-40c0-b2d1-538120eb58cf" alt="File Cover" class="cover">
+        <a href="https://www.pinterest.com/pin/create/button/?url=https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator-bold.html" class="pinterest-share" target="_blank">Pin it</a>
+        <div class="title">(Expired Free Access) Printable Minimalist Bold Calendar</div>
+        <div class="button-container">
+            <button onclick="watchReel('file12', 'https://www.facebook.com/share/r/1L3eSNMD63/')">Watch Facebook Reel</button>
+            <button id="downloadBtn11" disabled onclick="downloadFile('file11')">Download File 12</button>
+        </div>
+    </div>
+       
     <!-- Password Prompt -->
     <div id="passwordPrompt">
         <h2>Enter Password</h2>
