--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </div>
 
        <div class="fileItem" id="file12" data-password="sanhi" data-file-link="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fdesktop%20wallpaper%20organizer%20calendar%20to%20do%20list.jpg?alt=media&token=083a5252-d2ca-40c0-b2d1-538120eb58cf">
-       <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fdesktop%20wallpaper%20organizer%20calendar%20to%20do%20list.jpg?alt=media&token=083a5252-d2ca-40c0-b2d1-538120eb58cf" alt="File Cover" class="cover">
+       <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/files%2Facess.pdf?alt=media&token=b7ecdd4d-43cc-4c8d-b301-f410c385425a" alt="File Cover" class="cover">
         <a href="https://www.pinterest.com/pin/create/button/?url=https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator-bold.html" class="pinterest-share" target="_blank">Pin it</a>
         <div class="title">(Expired Free Access) Printable Minimalist Bold Calendar</div>
         <div class="button-container">
