--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <div class="fileItem" id="file5" data-password="Ilang taon ka?" data-file-link="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/files%2Fprintable%20notead%20cute%20dog.png?alt=media&token=db40bf78-352d-4d34-a464-5268d8629fcd">
         <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fprintable%20notepad%20cute%20dog.jpg?alt=media&token=ea71000c-5de3-44a5-9bf7-f91a248fcabf" alt="File Cover" class="cover">
         <a href="https://www.pinterest.com/pin/create/button/?url=https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/files%2Fprintable%20notead%20cute%20dog.png?alt=media&token=db40bf78-352d-4d34-a464-5268d8629fcd" class="pinterest-share" target="_blank">Pin it</a>
-        <div class="title">Printable Memo Pad Cute Dog</div>
+        <div class="title">Printable Memo Pad Cute Dog & Paws</div>
         <div class="button-container">
             <button onclick="watchReel('file5', 'https://www.facebook.com/reel/3687824128173367')">Watch Facebook Reel</button>
             <button id="downloadBtn5" disabled onclick="downloadFile('file5')">Download File 5</button>
@@ -404,7 +404,7 @@
     <div class="fileItem" id="file10" data-password="bakal" data-file-link="https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator_28.html">
          <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fprintable%20%20minimalist%20trasparent%20calendar.jpg?alt=media&token=2a6531a3-0991-4b43-88aa-4173fa88e553" alt="File Cover" class="cover">
         <a href="https://www.pinterest.com/pin/create/button/?url=https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator_28.html" class="pinterest-share" target="_blank">Pin it</a>
-        <div class="title"> (Expired Free Access) Minimalist Calendar Generator</div>
+        <div class="title"> (Expired Free Access) Minimalist Calendar Generator Automated & SVG</div>
         <div class="button-container">
             <button onclick="watchReel('file10', 'https://www.facebook.com/share/r/AZuY8p72B54o95dU/')">Watch Facebook Reel</button>
             <button id="downloadBtn10" disabled onclick="downloadFile('file10')">Download File 10</button>
@@ -414,7 +414,7 @@
     <div class="fileItem" id="file11" data-password="kaibigan" data-file-link="https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator-bold.html">
        <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fprintable%20minimalist%20calendar%20transpa.jpg?alt=media&token=a0c5be70-1be0-4384-b7e8-8a771caf04ee" alt="File Cover" class="cover">
         <a href="https://www.pinterest.com/pin/create/button/?url=https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator-bold.html" class="pinterest-share" target="_blank">Pin it</a>
-        <div class="title">(Expired Free Access) Printable Minimalist Bold Calendar</div>
+        <div class="title">(Expired Free Access) Printable Minimalist Bold Calendar Automated & SVG</div>
         <div class="button-container">
             <button onclick="watchReel('file11', 'https://www.facebook.com/share/r/uXzSgM256AFkNb9h/')">Watch Facebook Reel</button>
             <button id="downloadBtn11" disabled onclick="downloadFile('file11')">Download File 11</button>
@@ -424,7 +424,7 @@
        <div class="fileItem" id="file12" data-password="sanhi" data-file-link="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/files%2Facess.pdf?alt=media&token=b7ecdd4d-43cc-4c8d-b301-f410c385425a">
        <img src="https://firebasestorage.googleapis.com/v0/b/online-storage-314fb.appspot.com/o/covers%2Fdesktop%20wallpaper%20organizer%20calendar%20to%20do%20list.jpg?alt=media&token=083a5252-d2ca-40c0-b2d1-538120eb58cf" alt="File Cover" class="cover">
         <a href="https://www.pinterest.com/pin/create/button/?url=https://dcdigitaldownloads.blogspot.com/p/minimalist-calendar-generator-bold.html" class="pinterest-share" target="_blank">Pin it</a>
-        <div class="title">(Expired Free Access) Printable Minimalist Bold Calendar</div>
+        <div class="title">Desktop Wallpaper Organizer with Calendar & To Do List</div>
         <div class="button-container">
             <button onclick="watchReel('file12', 'https://www.facebook.com/share/r/1L3eSNMD63/')">Watch Facebook Reel</button>
             <button id="downloadBtn12" disabled onclick="downloadFile('file12')">Download File 12</button>
